portainer/portainer-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: portainer
  name: portainer
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: portainer.2hu.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portainer
            port:
              name: http
